--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,17 +1,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Press+Start+2P&family=Raleway:wght@800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
-
-:root {
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Luckiest+Guy&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Press+Start+2P&family=Raleway:wght@800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+:root,
+root[data-theme="dark"] {
   --primary-color: #f0f0f0;
 
   --primary-bg-color: #111217;
   --secondary-bg-color: #28292e;
-  --border-color: #28292e;
+  --primary-border-color: #28292e;
+  --secundary-border-color: #56575a;
 
-  --title-color: #9a9a9c;
+  --title-color: #f0f0f0;
   --text-color: #9a9a9c;
   --link-color: #9a9a9c;
+  --icon-color: #c7c8c9;
 }
+:root[data-theme="light"] {
+  --primary-color: #0b0b0f;
 
+  --primary-bg-color: #e9e9e9;
+  --secondary-bg-color: #c7c8c9;
+  --primary-border-color: #c7c8c9;
+  --secundary-border-color: #c7c8c9;
+
+  --title-color: #0b0b0f;
+  --text-color: #28292e;
+  --link-color: #56575a;
+  --icon-color: #56575a;
+}
+html[data-theme="light"].brand__logo {
+  filter: invert(1);
+}
 * {
   margin: 0;
   padding: 0;
@@ -32,6 +50,27 @@ a {
 i {
   color: var(--icon-color);
 }
+b {
+  font-weight: 400;
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-weight: 200;
+}
+p {
+  font-size: 1.25rem;
+  text-align: justify;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "League Spartan", Courier, monospace;
+  text-transform: uppercase;
+  color: var(--title-color);
+  font-size: 200;
+}
 
 .header {
   display: flex;
@@ -41,7 +80,11 @@ i {
   padding: 0.5rem 1rem;
   width: 100%;
 }
-
+.header__toggle {
+  display: flex;
+  justify-content: flex-end;
+  min-width: 40%;
+}
 .header__brand .brand__logo {
   width: 3.25rem;
   height: 3.25rem;
@@ -50,6 +93,8 @@ i {
 #toggleTheme {
   font-size: 1.5rem;
   color: var(--primary-color);
+  cursor: pointer;
+  transition: ease-in-out 0.4s;
 }
 
 .menu {
@@ -65,7 +110,7 @@ i {
   position: fixed;
   bottom: 0;
   justify-content: space-between;
-  border-top: 1px solid var(--border-color);
+  border-top: 1px solid var(--primary-border-color);
 }
 
 .menu--mobile .menu__link {
@@ -75,6 +120,13 @@ i {
   align-items: center;
   padding: 0.5 1rem;
   gap: 0.5rem;
+}
+
+.menu__link.active .menu__icon,
+.menu__link.active .menu__text .menu__link:hover .menu__icon,
+.menu__link:hover .menu__text {
+  color: var(--primary-color);
+  font: weight 600;
 }
 
 .menu__icon,
@@ -91,8 +143,182 @@ i {
   text-transform: uppercase;
 }
 
+.header__nav {
+  display: none;
+}
+
+.menu--principal {
+  gap: 1rem;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 2.5rem 1rem;
+}
+.main__content1 {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.menu--social {
+  gap: 1rem;
+}
+
+.main__content2 iframe {
+  width: 100%;
+  height: 50%;
+  aspect-ratio: 16/9;
+}
+.Skills {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 6.27rem 1rem 2rem 1rem;
+  background: var(--secondary-bg-color);
+  margin-top: -5.5rem;
+  gap: 1.25rem;
+}
+.Skills h2 {
+  font-size: 2rem;
+  text-transform: none;
+}
+.Skills_list {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  gap: 5rem;
+}
+
+.skills__item {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 4.8rem;
+  height: 4.8rem;
+  aspect-ratio: 1/1;
+  border: 1px solid var(--secundary-border-color);
+  border-radius: 50rem;
+}
+
+.skills__logo {
+  height: 2.4;
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.625rem;
+  width: 80%;
+  background: transparent;
+  border-radius: 3.125rem;
+  padding: 0.875rem 1rem;
+  transition: ease-in-out 0.3s;
+  cursor: pointer;
+}
+
+.btn:hover {
+  transform: scale(1.05);
+  transition: ease-in-out 0.3s;
+}
+
+.btn span,
+.btn i {
+  font-size: 1.25rem;
+  text-transform: uppercase;
+}
+.btn--primary span {
+  color: var(--primary--color);
+}
+.btn--primary span {
+  border: 1px solid var(--primary--color);
+}
+
+footer p {
+  font-size: 0.875rem;
+  text-align: center;
+}
+
 @media (min-width: 768px) {
-  .menu--mobile {
+  .header {
+    position: fixed;
+    border-bottom: 1px solid var(--primary-border-color);
+    padding: 1rem 6rem;
+    background: var(--primary-bg-color);
+  }
+
+  .nav--mobile {
     display: none;
+  }
+  .header__nav {
+    display: flex;
+  }
+  .header__nav,
+  .header__toggle {
+    min-width: 30%;
+  }
+  h1 {
+    font-size: 5;
+  }
+  main {
+    padding: 8rem 6rem 4rem 6rem;
+  }
+  .main__content1 {
+    display: flex;
+    width: 120rem;
+
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .Skills {
+    padding: 6.27rem 6rem 2rem 1rem;
+    margin-top: -6rem;
+  }
+}
+@media (min-width: 1200px) {
+  main {
+    padding: 12rem 6rem;
+  }
+  .main__content1 .btn {
+    width: auto;
+  }
+  .Skills {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10rem 6rem 4rem;
+  }
+  .Skills h2 {
+    font: size 3.5rem;
+    width: 60%;
+  }
+  .skills__list {
+    gap: 1rem;
+  }
+  .skills__item {
+    width: 4rem;
+    height: 4rem;
+  }
+
+  .skills__logo {
+    height: 2rem;
+  }
+}
+@media (min-width: 1400px) {
+  .header {
+    padding: 1rem 15rem;
+  }
+  .main {
+    padding: 12rem 15rem 2rem;
+  }
+  .btn {
+    width: 20%;
+  }
+  .Skills {
+    padding: 10rem 15rem 4rem;
   }
 }
